--- a/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxExportManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxExportManagerWindow.zul
@@ -64,7 +64,7 @@
             <rows>
                 <row>
                     <label value="@{ctl.recordCountLabel}" />
-                    <intbox value="@{ctl.rows}" hflex="true" sclass="margin-bottom1" />
+                    <intbox value="@{ctl.rows}" hflex="true" sclass="margin-bottom1" id="intboxRows"/>
                 </row>
                 <row>
                     <label value="${c:l('listbox.exportManager.sheetName')}" />
