Správce exportování- pridani validace pro jmeno exportovaneho souboru

--- a/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxExportManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxExportManagerWindow.zul
@@ -72,7 +72,7 @@
                 </row>
                 <row>
                     <label value="${c:l('listbox.exportManager.fileName')}" />
-                    <textbox value="@{ctl.fileName}" hflex="true" sclass="margin-bottom1" />
+                    <textbox value="@{ctl.fileName}" hflex="true" sclass="margin-bottom1" id="textboxFileName"/>
                 </row>
             </rows>
         </grid>
